cmake_minimum_required(VERSION 3.26)
project(Practice01 C)

set(CMAKE_C_STANDARD 23)

add_executable(Practice01
        #Pattern.c
        #"Sum of odd.c"
       # "Impliment call by value .c"
        sample.c
        11.c
        12.c
        13.c
        14.c
        15.c
        16.c
        17.c
        18.c
        19.c
        20.c
        21.c
        22.c
        23.c
        24.c
        25.c
        26.c
        27.c
        28.c
        29.c
        "30(i).c"
        "30(ii).c"
        31.c
        32.c
        33.c
        34.c
        35.c
        36.c
        37.c
        38.c
        39.c
        40.c
        41.c
        42.c
        43.c
        44.c
        45.c
        46.c
        47.c
        48.c
        49.c
        50.c
        51.c
        52.c
        53.c
        54.c
        55.c
        56.c
        57.c
        #  9.c
       # 10.c
       # 11.c
        #        main.c
#        Sum.c
#        Substraction.c
#        Amicable.c
 #       "Liberty Function .c"
 #       1..c
  #      2.c
 #       3.c
   #     4.c
    #    5.c
     #   6.c
      #  7.c
       # 8
       # cmake-build-debug/Factorial.c
        #cmake-build-debug/Pattern.c
        #Factorial.c
       # Substraction.c
      #  Substraction.c

)