cmake_minimum_required(VERSION 3.26)
project(Practice01 C)

set(CMAKE_C_STANDARD 23)

add_executable(Practice01
        #Pattern.c
        #"Sum of odd.c"
       # "Impliment call by value .c"


       # 59.c
        60.c
        61.c
        #  9.c
       # 10.c
       # 11.c
        #        main.c
#        Sum.c
#        Substraction.c
#        Amicable.c
 #       "Liberty Function .c"
 #       1..c
  #      2.c
 #       3.c
   #     4.c
    #    5.c
     #   6.c
      #  7.c
       # 8
       # cmake-build-debug/Factorial.c
        #cmake-build-debug/Pattern.c
        #Factorial.c
       # Substraction.c
      #  Substraction.c

)